fix align item button

--- a/app/style.css
+++ b/app/style.css
@@ -244,6 +244,7 @@ body {
 .player__controls {
   display: flex;
   justify-content: space-between;
+  align-items: center;
   width: 75%;
   margin-left: auto;
   margin-right: auto;
@@ -428,8 +429,8 @@ body {
   }
 
   .controls__item-repeat {
-    width: 4rem;
-    height: 4rem;
+    width: 2rem;
+    height: 2rem;
   }
 
   .nav__brand,
